tests/ui/async-await/async-fn/suggest-constrain.stderr
error[E0277]: `<F as AsyncFnMut<()>>::CallRefFuture<'_>` cannot be sent between threads safely
  --> $DIR/suggest-constrain.rs:5:16
   |
LL |     check_send(f());
   |     ---------- ^^^ `<F as AsyncFnMut<()>>::CallRefFuture<'_>` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Send` is not implemented for `<F as AsyncFnMut<()>>::CallRefFuture<'_>`
note: required by a bound in `check_send`
  --> $DIR/suggest-constrain.rs:9:18
   |
LL | fn check_send<T: Send>(_: T) {}
   |                  ^^^^ required by this bound in `check_send`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
